# uav-electronics-tool

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/: batteries.csv  inputs.json  motors.csv
data/Batteries/: batteries.csv
data/Motors/: motors.csv
outputs/: recommendations_batteries.csv  recommendations_escs.csv  recommendations_motors.csv  recommendations_propellers.csv
public/: app.js  index.html  style.css
src/: main.py
src/uav_electronics_tool/: cli.py  db.py  gui.py  recommend.py
src/uav_electronics_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
